# libanim

./: .clang-format  .gitignore  README.md  meson.build  version.sh
include/libanim/: anim.h  html.h  libanimv.h  net.h  util.h
src/: anim.c  html.c  libanimv.c  meson.build  net.c
src/extractors/: extractor.h  meson.build
src/extractors/alucard/: alucard.c  alucard.h
src/extractors/sibnet/: sibnet.c  sibnet.h
src/providers/: meson.build  provider.c  provider.h
src/providers/tr/turkanime/: turkanime.c  turkanime.h
src/util/: base64.c  decrypt.c  format_string.c  hex.c  meson.build  murmur.c
